force-app/main/default/objects/Distribution_Batch__c/Distribution_Batch__c.object-meta.xml
<CustomObject>
    <description>Header record grouping Distributions processed together (quarterly, monthly, or exit). Carries batch totals maintained by Phase C automation.</description>
    <label>Distribution Batch</label>
    <nameField>
        <displayFormat>DB-{000}</displayFormat>
        <label>Batch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribution Batches</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>