force-app/main/default/objects/Distribution_Batch__c/fields/ACH_Amount__c.field-meta.xml
<CustomField>
    <fullName>ACH_Amount__c</fullName>
    <description>Portion of the batch total paid via ACH. Maintained by Phase C automation; seeded in Phase A.</description>
    <inlineHelpText>ACH portion of the batch payout. Updated by automation in a later phase.</inlineHelpText>
    <label>ACH Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>