force-app/main/default/objects/Distribution_Batch__c/fields/Approval_Count__c.field-meta.xml
<CustomField>
    <fullName>Approval_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of approvals recorded against this batch toward the two-of-three approval requirement (Phase C). Defaults to zero.</description>
    <inlineHelpText>Number of approvals captured for this batch. Maintained by approval automation in a later phase.</inlineHelpText>
    <label>Approval Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>