force-app/main/default/objects/Distribution_Batch__c/fields/Batch_Type__c.field-meta.xml
<CustomField>
    <fullName>Batch_Type__c</fullName>
    <description>Cadence or nature of this distribution batch.</description>
    <inlineHelpText>Select the batch cadence: Quarterly, Monthly, or a one-time Exit distribution.</inlineHelpText>
    <label>Batch Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Exit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>