force-app/main/default/objects/Distribution_Batch__c/fields/Cheque_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Amount__c</fullName>
    <description>Portion of the batch total paid via cheque. Maintained by Phase C automation; seeded in Phase A.</description>
    <inlineHelpText>Cheque portion of the batch payout. Updated by automation in a later phase.</inlineHelpText>
    <label>Cheque Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>