force-app/main/default/objects/Distribution_Batch__c/fields/Distribution_Date__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Date__c</fullName>
    <description>Scheduled or actual payout date for the distributions in this batch.</description>
    <inlineHelpText>Enter the date the batch&apos;s distributions are paid.</inlineHelpText>
    <label>Distribution Date</label>
    <type>Date</type>
</CustomField>