force-app/main/default/objects/Distribution_Batch__c/fields/Distribution_Period__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Period__c</fullName>
    <label>Distribution Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>