force-app/main/default/objects/Distribution_Batch__c/fields/Investor_Count__c.field-meta.xml
<CustomField>
    <fullName>Investor_Count__c</fullName>
    <description>Number of investors receiving a distribution in this batch. Maintained by Phase C automation; seeded in Phase A.</description>
    <inlineHelpText>Count of investors paid in this batch. Updated by automation in a later phase.</inlineHelpText>
    <label>Investor Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>