force-app/main/default/objects/Distribution_Batch__c/fields/Offering__c.field-meta.xml
<CustomField>
    <fullName>Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The offering whose distributions are grouped in this batch.</description>
    <inlineHelpText>Link the offering this distribution batch is for.</inlineHelpText>
    <label>Offering</label>
    <referenceTo>Offering__c</referenceTo>
    <relationshipLabel>Distribution Batches</relationshipLabel>
    <relationshipName>Distribution_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>