force-app/main/default/objects/Distribution_Batch__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash Flow</fullName>
            </value>
            <value>
                <fullName>Redemption</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
            <value>
                <fullName>Sale of Property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>