force-app/main/default/objects/Distribution_Batch__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>Total distribution amount across all distributions in this batch. Maintained by Phase C automation; seeded in Phase A.</description>
    <inlineHelpText>Total payout for this batch. Updated by automation in a later phase.</inlineHelpText>
    <label>Total Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>