force-app/main/default/objects/Distribution_Batch__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Catch Up</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Preferred Return</fullName>
            </value>
            <value>
                <fullName>Return of Capital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>