force-app/main/default/objects/Distribution_Batch__c/listViews/Pending_Approval.listView-meta.xml
<ListView>
    <fullName>Pending_Approval</fullName>
    <columns>NAME</columns>
    <columns>Offering__c</columns>
    <columns>Batch_Type__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Distribution_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </filters>
    <label>Pending Approval</label>
</ListView>