force-app/main/default/objects/Distribution_Batch__c/listViews/Processing.listView-meta.xml
<ListView>
    <fullName>Processing</fullName>
    <columns>NAME</columns>
    <columns>Total_Amount__c</columns>
    <columns>Investor_Count__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Processing</value>
    </filters>
    <label>Processing</label>
</ListView>